<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="Title1">มหาวิทยาลัยสวนดุสิตมีรากฐานที่มั่นคง</string>
    <string name="Title1_1">และวัฒนธรรมการเรียนรู้ด้านอาหารไทย</string>
    <string name="Title11_1">  รากฐานที่มั่นคงคือ ภูมิหลังความเป็นมาวัฒนธรรมการเรียนรู้ด้านอาหารไทย การสืบทอดและรักษาด้านอาหารไทยตามเจตนารมณ์ของคุณหญิงกระจ่างศรี รักตะกนิษฐ ต่อยอดจาก “ยุคโรงเรียนการเรือน” ในระดับมหาวิทยาลัย มาถึงในระดับคณะ อัตลักษณ์ด้านอาหารสืบทอดมาตั้งแต่การก่อตั้งหลักสูตรคหกรรมศาสตร์ โรงเรียนการเรือนสู่มหาวิทยาลัยสวนดุสิตในปัจจุบัน</string>
    <string name="Title11_2">นโยบาย และยุทธศาสตร์ที่ ท้าทายบนความเปลี่ยนแปลง กำหนดเป้าหมาย และพันธกิจของมหาวิทยาลัยสู่ความเป็นเลิศด้านอาหารไทยคือ มุ่งเน้นคุณภาพทั้งเชิงปริมาณและเชิงคุณภาพ   กลยุทธ์การบริหาร การผลิตบัณฑิต และการถ่ายทอดเป้าหมาย และนโยบายมีความสำคัญต่อการผลิตบัณฑิตที่มีคุณภาพด้านอาหารไทย </string>
    <string name="Title2">กำหนดเป้าหมาย พันธกิจ นโยบาย </string>
    <string name="Title2_2">ยุทธศาสตร์ และมีการเชื่อมโยงทั่วทั้ง</string>
    <string name="Title22"> นโยบาย และยุทธศาสตร์ที่ ท้าทายบนความเปลี่ยนแปลง กำหนดเป้าหมาย และพันธกิจของมหาวิทยาลัยสู่ความเป็นเลิศด้านอาหารไทยคือ มุ่งเน้นคุณภาพทั้งเชิงปริมาณและเชิงคุณภาพ   กลยุทธ์การบริหาร การผลิตบัณฑิต และการถ่ายทอดเป้าหมาย และนโยบายมีความสำคัญต่อการผลิตบัณฑิตที่มีคุณภาพด้านอาหารไทย </string>
    <string name="Title3">กระบวนการทำงานตามพันธกิจของ</string>
    <string name="Title33">กำหนดมาตรฐานและเชื่อมโยงความรู้ด้านอาหารไทยระหว่างในมหาวิทยาลัย วิทยาเขต และศูนย์การศึกษานอกที่ตั้ง ในกระบวนการทำงานตาม
พันธกิจ 4 ด้าน คือ การผลิตบัณฑิต การวิจัย การบริการวิชาการ และการทำนุบำรุงศิลปวัฒนธรรม บูรณาการ    อัตลักษณ์และความเป็นเลิศด้านอาหารไทย รวมถึงกระบวนการฝึกประสบการณ์ของนักศึกษาเพื่อเพิ่มทักษะวิชาชีพ โดยแหล่งฝึกภายในมหาวิทยาลัย และมีการติดตาม และการควบคุมคุณภาพอย่างต่อเนื่อง
</string>
    <string name="Title4">ภาวะผู้นำการเปลี่ยนแปลง</string>
    <string name="Title4_1"> วิสัยทัศน์ของผู้บริหารระดับสูงในแต่ละยุคสืบทอดการเป็นมหาวิทยาลัยเฉพาะทางด้านอาหารไทย  และมหาวิทยาลัยเป็นผู้นำด้านพัฒนา/ปรับปรุงหลักสูตรบูรณาการศาสตร์สาขาอาหารกับศาสตร์ที่เกี่ยวข้องเพื่อผลิตบัณฑิตที่ตรงตามความต้องการของตลาดแรงงาน</string>
    <string name="Title5">การปรับองค์กรต่อสภาพแวดล้อม</string>
    <string name="Tiltle5_1">การปรับตัวตามสภาพแวดล้อมและสถานการณ์ที่เปลี่ยนแปลง การเพิ่มทักษะและการจัดการทางด้านอาหารไทยสำหรับอาจารย์และนักศึกษาเพื่อให้ทันต่อการเปลี่ยนแปลง จัดสรรงบประมาณและทรัพยากรที่เกี่ยวข้องจะส่งเสริมสนับสนุนความเป็นเลิศด้านอาหารไทย</string>
    <string name="Title6_1">ชื่อเสียงและผลงาน</string>
    <string name="Title6">การได้รับความเชื่อถือและการยอมรับใน</string>
    <string name="Title66">การเป็นแหล่งอ้างอิงทางวิชาการทั้งชื่อของมหาวิทยาลัยและบุคลากร ส่งเสริมบุคลากรให้เป็นผู้นำหรือกรรมการในหน่วยงานที่เกี่ยวข้องด้านอาหารไทยมีบทบาทในการกำหนดคุณลักษณะวิชาชีพของหลักสูตรและบัณฑิต และส่งเสริมให้อาจารย์และนักศึกษามีโอกาสก้าวสู่เวทีการแข่งขันด้านอาหาร และเวทีศิลปะประดิษฐ์ทั้งในระดับชาติ และระดับนานาชาติส่งผลต่อความเชื่อถือ ยอมรับในชื่อเสียงและได้รับความไว้วางใจจากองค์กรภาครัฐและเอกชนให้เป็นผู้รับผิดชอบในการจัดงานที่เกี่ยวข้องกับอาหารและการบริการทั้งในระดับชาติและนานาชาติ</string>
    <string name="Title7">สืบสาน รักษา และพัฒนาบุคลากร</string>
    <string name="Title7_1">การพัฒนาความรู้ความสามารถของบุคลากร การทำงานเป็นทีมระหว่างอาจารย์รุ่นเก่าและอาจารย์รุ่นใหม่ การทำงานร่วมกันระหว่างศาสตร์ที่เกี่ยวข้อง การส่งเสริมให้อาจารย์มีโอกาสฝึกฝนความรู้และทักษะวิชาชีพกับองค์กรหรือหน่วยงานต่างๆ รวมถึงการเข้าร่วมการแข่งขันด้านอาหารไทย และการปลูกฝังจิตสำนึกให้บุคลากรมีความประณีตในทุกขั้นตอนการผลิตด้านอาหารไทย สะท้อนการสืบสาน รักษา และส่งเสริมความเป็นเลิศด้านอาหารไทย</string>
    <string name="Title8">ระบบการสร้างและสั่งสมองค์ความรู้</string>
    <string name="Title8_1">ระบบหรือวิธีการสร้างองค์ความรู้ใหม่ ๆ การสั่งสมองค์ความรู้ และวัฒนธรรมองค์กรในการถ่ายทอดองค์ความรู้ ความสามารถในด้านอาหารไทยจากรุ่นสู่รุ่น เป็นสิ่งที่สำคัญและจำเป็นต่อการพัฒนาความรู้ด้านอาหารไทยของมหาวิทยาลัยให้ต่อเนื่องและยั่งยืน</string>
    <string name="Title9">การมุ่งมั่นพัฒนาความเป็นเลิศด้าน</string>
    <string name="Title9_1">อาหารไทยของมหาวิทยาลัย</string>
    <string name="Title99">การถ่ายทอดภาพลักษณ์การเป็นมหาวิทยาลัยที่มีความเป็นเลิศด้านอาหารไทยและการสร้างความเป็นเลิศด้านอาหารไทยเพื่อให้เกิดความยั่งยืนเป็นความมุ่งมั่นพัฒนา ความเป็นเลิศด้านอาหารไทยของมหาวิทยาลัย </string>
</resources>
